# orange3-flatpak

./: .cursorignore  .gitignore  Cargo.toml  README.md  build_flathub.sh  build_flatpak.sh  build_metadata.sh  orange.appdata.xml  orange.desktop  pyproject.toml  run_orange.sh  si.biolab.orange.yaml
