[project]
name = "orange3-flatpak"
version = "0.1.0"
description = "description"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "orange3",
    "PyQt6~=6.5.2",
    "PyQt6-Qt6~=6.5.2",
    "PyQt6-WebEngine~=6.5.0",
    "PyQt6-WebEngine-Qt6~=6.5.2",
]

[dependency-groups]
dev = [
    "aiohttp>=3.12.15",
    "flatpak-pip-generator>=25.0.0",
    "requirements-parser>=0.13.0",
    "toml>=0.10.2",
]
